--- a/day47_board/WebContent/WEB-INF/web.xml
+++ b/day47_board/WebContent/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>day47_board</display-name>
   
+    <!-- jdbc:BoardDB DBCP setting -->
   <resource-ref>
-	  <description>DBCP Connection Test</description>
+	  <description>Board Connection</description>
 	  <res-ref-name>jdbc:BoardDB</res-ref-name>
 	  <res-type>javax.sql.DataSource</res-type>
 	  <res-auth>Container</res-auth>
